添加保存设置的功能

--- a/QuicklyOpen/App.config
+++ b/QuicklyOpen/App.config
@@ -1,6 +1,93 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="QuicklyOpen.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <QuicklyOpen.Settings1>
+            <setting name="path1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path11" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="path12" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename10" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename11" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="filename12" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="locationX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="locationY" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </QuicklyOpen.Settings1>
+    </userSettings>
 </configuration>
